@@ -10,6 +10,8 @@ Revision history for Perl extension TAP::Formatter::JUnit.
       from Joe McMahon.
     - tap2junit can now filter stdin/stdout; use "-" as the filename.  Thanks
       to Joe McMahon for the original patch on which this is based
+    - switch unit tests to use Test::Output for capturing output, instead of
+      trying to run "prove" directly
 
 0.03    Sun Dec 13 22:36 PST 2009
     - add timer output for each test case (not just for the suite as a whole);
